@@ -1,3 +1,5 @@
+- ask loading modules from /modules if needed
+
 1.14:
 - fix segfault in USB detection code (when no module match, #32624)
 
